--- a/stream-three.html
+++ b/stream-three.html
@@ -1,60 +1,57 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Stream Three</title>
+		<title>Hello World</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
+	
 	<body>
 		<nav>
-			<ul>
-				<li><a href="index.html">Stream One</a></li>
-				<li><a href="stream-two.html">Stream Two</a></li>
-				<li><a href="stream-three.html">Stream Three</a></li>
-			</ul>
+		    <ul>
+		        <li><a href="index.html">Stream One</a></li>
+		        <li><a href="stream-two.html">Stream Two</a></li>
+		        <li><a href="stream-three.html">Stream Three</a></li>
+		    </ul>
 		</nav>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Python_logo_and_wordmark.svg/300px-Python_logo_and_wordmark.svg.png">
-				<h2>Python</h2>
-			</a>
-		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Django_(web_framework)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Django_logo.svg/278px-Django_logo.svg.png">
-				<h2>Django</h2>
-			</a>
-		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Heroku">
-				<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/Heroku_logo.png">
-				<h2>Heroku</h2>
-			</a>
-		</div>
-		
-		
+		<h1>Stream Three</h1>
+		<div class="row">
 			<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Git">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/225px-Git-logo.svg.png">
-				<h2>Git</h2>
-			</a>
+				<a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank">
+                    <img src="https://ee5817f8e2e9a2e34042-3365e7f0719651e5b8d0979bce83c558.ssl.cf5.rackcdn.com/python.png"/>
+                    <h2>Python</h2>
+                </a>
+			</div>
+			<div class="card">
+                <a href="https://en.wikipedia.org/wiki/Django_(web_framework)" target="_blank">
+                    <img src="https://www.djangoproject.com/s/img/logos/django-logo-negative.png"/>
+                    <h2>Django</h2>
+                </a>
+            </div>
+            <div class="card">
+                <a href="https://en.wikipedia.org/wiki/Heroku" target="_blank">
+                    <img src="https://pbs.twimg.com/profile_images/689189555765784576/3wgIDj3j.png"/>
+                    <h2>Heroku</h2>
+                </a>
+            </div>
 		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/GitHub">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GitHub_logo_2013_padded.svg/375px-GitHub_logo_2013_padded.svg.png">
-				<h2>GitHub</h2>
-			</a>
+		<div class="row">
+			<div class="card">
+				<a href="https://en.wikipedia.org/wiki/Git" target="_blank">
+					<img src="http://valuebound.com/sites/default/files/2015-12/Beginners_guide_setting_up-git.jpg"/>
+					<h2>Git</h2>
+				</a>
+			</div>
+			<div class="card">
+				<a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
+					<img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png"/>
+					<h2>GitHub</h2>
+				</a>
+			</div>
+			<div class="card">
+				<a href="https://en.wikipedia.org/wiki/MySQL" target="_blank">
+					<img src="https://www.arvixe.com/images/landing_pages/mysql_hosting.png"/>
+					<h2>MySQL</h2>
+				</a>
+			</div>
 		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/MySQL">
-				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/204px-MySQL.svg.png">
-				<h2>MySQL</h2>
-			</a>
-		</div>
-		
-	</body>
-</html>
+	
