--- a/stream-two.html
+++ b/stream-two.html
@@ -1,59 +1,58 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Stream two</title>
+		<title>Hello World</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
+	
 	<body>
 		<nav>
-			<ul>
-				<li><a href="index.html">Stream One</a></li>
-				<li><a href="stream-two.html">Stream Two</a></li>
-				<li><a href="stream-three.html">Stream Three</a></li>
-			</ul>
+		    <ul>
+		        <li><a href="index.html">Stream One</a></li>
+		        <li><a href="stream-two.html">Stream Two</a></li>
+		        <li><a href="stream-three.html">Stream Three</a></li>
+		    </ul>
 		</nav>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Python_logo_and_wordmark.svg/300px-Python_logo_and_wordmark.svg.png">
-				<h2>Python</h2>
-			</a>
-		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Flask_(web_framework)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flask_logo.svg/330px-Flask_logo.svg.png">
-				<h2>Flask</h2>
-			</a>
-		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/MongoDB">
-				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/45/MongoDB-Logo.svg/375px-MongoDB-Logo.svg.png">
-				<h2>MongoDB</h2>
-			</a>
-		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/MySQL">
-				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/204px-MySQL.svg.png">
-				<h2>MySQL</h2>
-			</a>
-		</div>
-		
+		<h1>Stream Two</h1>
+		<div class="row">
 			<div class="card">
-			<a href="https://en.wikipedia.org/wiki/Git">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/225px-Git-logo.svg.png">
-				<h2>Git</h2>
-			</a>
+				<a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank">
+                    <img src="https://ee5817f8e2e9a2e34042-3365e7f0719651e5b8d0979bce83c558.ssl.cf5.rackcdn.com/python.png"/>
+                    <h2>Python</h2>
+                </a>
+			</div>
+			<div class="card">
+                <a href="https://en.wikipedia.org/wiki/Flask_(web_framework)" target="_blank">
+                    <img src="http://flask.pocoo.org/docs/0.12/_static/flask.png"/>
+                    <h2>Flask</h2>
+                </a>
+            </div>
+            <div class="card">
+                <a href="https://en.wikipedia.org/wiki/MongoDB" target="_blank">
+                    <img src="https://webassets.mongodb.com/_com_assets/cms/MongoDB-Logo-5c3a7405a85675366beb3a5ec4c032348c390b3f142f5e6dddf1d78e2df5cb5c.png"/>
+                    <h2>MongoDB</h2>
+                </a>
+            </div>
 		</div>
-		
-		<div class="card">
-			<a href="https://en.wikipedia.org/wiki/GitHub">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GitHub_logo_2013_padded.svg/375px-GitHub_logo_2013_padded.svg.png">
-				<h2>GitHub</h2>
-			</a>
+		<div class="row">
+			<div class="card">
+				<a href="https://en.wikipedia.org/wiki/MySQL" target="_blank">
+					<img src="https://www.arvixe.com/images/landing_pages/mysql_hosting.png"/>
+					<h2>MySQL</h2>
+				</a>
+			</div>
+			<div class="card">
+				<a href="https://en.wikipedia.org/wiki/Git" target="_blank">
+					<img src="http://valuebound.com/sites/default/files/2015-12/Beginners_guide_setting_up-git.jpg"/>
+					<h2>Git</h2>
+				</a>
+			</div>
+			<div class="card">
+				<a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
+					<img src="https://pbs.twimg.com/profile_images/616309728688238592/pBeeJQDQ.png"/>
+					<h2>GitHub</h2>
+				</a>
+			</div>
 		</div>
-		
 	</body>
 </html>
